--- a/contrib/examples/index.xhtml
+++ b/contrib/examples/index.xhtml
@@ -1,7 +1,8 @@
+  
   <body>
     <div>
       <wd>
-         <object class="MyTest" id="page"/>
+         <text>menu</text>
       </wd>
     </div>
 </body>
